--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.5",
     "mongoose-paginate": "^5.0.3",
-    "require-dir": "^1.2.0"
+    "require-dir": "^1.2.0",
+    "webshot": "^0.18.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
