--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.5",
     "mongoose-paginate": "^5.0.3",
+    "path": "^0.12.7",
     "require-dir": "^1.2.0",
     "webshot": "^0.18.0"
   },
